# HackerAI

./: .gitignore  README.md  pyproject.toml
dataset/: test.json  val.json
dataset_creation/: 1_data_collector.py  2_data_filter.py  3_data_structurer.py  4_domain_classifier.py  6_security_aligner.py  8_final_assembler.py  9_dataset_preprocessor.py  README.md  debug_flatten.py  tmp_analyze_filtered.py
train/: README.md  analysis_evaluation.py  analyze_instruction_lengths.py  cybermetric_eval_updated.py  evaluate.py  evaluate_baseline.py  evaluate_baseline_gpt_oss.py  export_trial.py  finetune.py  finetune_gpt_oss.py  optuna_search.py  optuna_search_gpt_oss.py  split_dataset.py
train_results/: best_hparams.json  study.db
