[project]
dependencies = ["malwarebazaar>=0.2.8,<0.3"]
name = "cyber-llm-instruct-py"
requires-python = "==3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.hatch.build.targets.wheel]
packages = ["src/cyber-llm-instruct-py"]

[tool.pixi.pypi-dependencies]
cyber_llm_instruct_py = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.system-requirements]
cuda = "12.9"

[tool.pixi.dependencies]
python = "3.12.*"
cuda-version = "12.9.*"
cuda-toolkit = ">=12.9.1,<13"
unsloth = "2025.9.11.*"
# pytorch-gpu = "2.7.1.*"
flash-attn = "2.7.4.*"
huggingface_hub = ">=0.35.3,<0.36"
datasets = ">=3.4.1"
transformers = ">=4.51.3,<=4.55.4"
peft = ">=0.17.1,<0.18"
accelerate = ">=1.10.1,<2"
bitsandbytes = ">=0.48.1,<0.49"
optuna = "*"
optuna-integration = "*"
optuna-dashboard = "*"
google-genai = "1.43.0.*"
evaluate = ">=0.4.6,<0.5"
pyarrow = "*"
numpy = "*"
openai = "*"
# vllm = ">=0.10.0,<0.11"
pytorch = ">=2.7.1,<3"

requests = ">=2.32.5,<3"
beautifulsoup4 = ">=4.14.2,<5"
feedparser = ">=6.0.12,<7"
pandas = ">=2.3.3,<3"
pyyaml = ">=6.0.3,<7"
lxml = ">=6.0.2,<7"
scikit-learn = ">=1.7.2,<2"
joblib = ">=1.5.2,<2"
questionary = ">=2.1.1,<3"
rich = ">=14.2.0,<15"
jinja2 = ">=3.1.6,<4"
pygithub = ">=2.8.1,<3"
aiohttp = ">=3.13.0,<4"
tenacity = ">=9.1.2,<10"
tiktoken = ">=0.12.0,<0.13"
jsonschema = ">=4.25.1,<5"
tqdm = ">=4.67.1,<5"
tensorboard = ">=2.20.0,<3"
fire = ">=0.7.1,<0.8"
gradio = ">=3.24.1,<4"
wandb = ">=0.22.2,<0.23"
python-dotenv = ">=1.1.1,<2"
